# MLinalg

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  build_cmd.txt  test.sh
.github/workflows/: build-and-test.yml  doxygen-gh-pages.yml
cmake/: mlinalgConfig.cmake.in
docs/html/: MLinalg_8hpp.html  MLinalg_8hpp__incl.map  MLinalg_8hpp__incl.md5  MLinalg_8hpp_source.html  Operations_8hpp.html  Operations_8hpp.js  Operations_8hpp__dep__incl.map  Operations_8hpp__dep__incl.md5  Operations_8hpp__incl.map  Operations_8hpp__incl.md5  Operations_8hpp_a132d975d3b8930108fa504313c8991cb_cgraph.map  Operations_8hpp_a132d975d3b8930108fa504313c8991cb_cgraph.md5  Operations_8hpp_a132d975d3b8930108fa504313c8991cb_icgraph.map  Operations_8hpp_a132d975d3b8930108fa504313c8991cb_icgraph.md5  Operations_8hpp_a26fb7199eb0c367cdb15d404b08b1167_cgraph.map  Operations_8hpp_a26fb7199eb0c367cdb15d404b08b1167_cgraph.md5  Operations_8hpp_a444bb226d7dc0778b2b96c27e21f48f4_cgraph.map  Operations_8hpp_a444bb226d7dc0778b2b96c27e21f48f4_cgraph.md5  Operations_8hpp_a444bb226d7dc0778b2b96c27e21f48f4_icgraph.map  Operations_8hpp_a444bb226d7dc0778b2b96c27e21f48f4_icgraph.md5  Operations_8hpp_a567c516cc96619834ea1a8f30ed07eff_cgraph.map  Operations_8hpp_a567c516cc96619834ea1a8f30ed07eff_cgraph.md5  Operations_8hpp_a567c516cc96619834ea1a8f30ed07eff_icgraph.map  Operations_8hpp_a567c516cc96619834ea1a8f30ed07eff_icgraph.md5  Operations_8hpp_a568b559ab2982145d79c8b4e1e7733f7_cgraph.map  Operations_8hpp_a568b559ab2982145d79c8b4e1e7733f7_cgraph.md5  Operations_8hpp_a568b559ab2982145d79c8b4e1e7733f7_icgraph.map  Operations_8hpp_a568b559ab2982145d79c8b4e1e7733f7_icgraph.md5  Operations_8hpp_a577fb72b9db4a163ad600474e11754a4_cgraph.map  Operations_8hpp_a577fb72b9db4a163ad600474e11754a4_cgraph.md5  Operations_8hpp_a577fb72b9db4a163ad600474e11754a4_icgraph.map  Operations_8hpp_a577fb72b9db4a163ad600474e11754a4_icgraph.md5  Operations_8hpp_a61dac8383a2c25ace0227f9899511ca8_cgraph.map  Operations_8hpp_a61dac8383a2c25ace0227f9899511ca8_cgraph.md5  Operations_8hpp_a61dac8383a2c25ace0227f9899511ca8_icgraph.map  Operations_8hpp_a61dac8383a2c25ace0227f9899511ca8_icgraph.md5  Operations_8hpp_a9fb5f07ad9237c0b4d18af88bf28255b_cgraph.map  Operations_8hpp_a9fb5f07ad9237c0b4d18af88bf28255b_cgraph.md5  Operations_8hpp_a9fb5f07ad9237c0b4d18af88bf28255b_icgraph.map  Operations_8hpp_a9fb5f07ad9237c0b4d18af88bf28255b_icgraph.md5  (+135 more)
docs/html/search/: all_0.js  all_10.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  related_0.js  (+4 more)
docs/latex/: MLinalg_8hpp.tex  MLinalg_8hpp__incl.md5  MLinalg_8hpp_source.tex  Operations_8hpp.tex  Operations_8hpp__dep__incl.md5  Operations_8hpp__incl.md5  Operations_8hpp_a132d975d3b8930108fa504313c8991cb_cgraph.md5  Operations_8hpp_a132d975d3b8930108fa504313c8991cb_icgraph.md5  Operations_8hpp_a26fb7199eb0c367cdb15d404b08b1167_cgraph.md5  Operations_8hpp_a444bb226d7dc0778b2b96c27e21f48f4_cgraph.md5  Operations_8hpp_a444bb226d7dc0778b2b96c27e21f48f4_icgraph.md5  Operations_8hpp_a567c516cc96619834ea1a8f30ed07eff_cgraph.md5  Operations_8hpp_a567c516cc96619834ea1a8f30ed07eff_icgraph.md5  Operations_8hpp_a568b559ab2982145d79c8b4e1e7733f7_cgraph.md5  Operations_8hpp_a568b559ab2982145d79c8b4e1e7733f7_icgraph.md5  Operations_8hpp_a577fb72b9db4a163ad600474e11754a4_cgraph.md5  Operations_8hpp_a577fb72b9db4a163ad600474e11754a4_icgraph.md5  Operations_8hpp_a61dac8383a2c25ace0227f9899511ca8_cgraph.md5  Operations_8hpp_a61dac8383a2c25ace0227f9899511ca8_icgraph.md5  Operations_8hpp_a9fb5f07ad9237c0b4d18af88bf28255b_cgraph.md5  Operations_8hpp_a9fb5f07ad9237c0b4d18af88bf28255b_icgraph.md5  Operations_8hpp_aa1859ec6f98985ec36210c7de13e6344_cgraph.md5  Operations_8hpp_aa1859ec6f98985ec36210c7de13e6344_icgraph.md5  Operations_8hpp_aa6dc1c75852e8e132ab055e44a9d05c9_cgraph.md5  Operations_8hpp_aa6dc1c75852e8e132ab055e44a9d05c9_icgraph.md5  Operations_8hpp_aac2fcdb2b8f7e58cc1e21d08e16dbbb7_cgraph.md5  Operations_8hpp_aac2fcdb2b8f7e58cc1e21d08e16dbbb7_icgraph.md5  Operations_8hpp_abb03fc491f2bc26563a166e1ec5c29b0_cgraph.md5  Operations_8hpp_abb03fc491f2bc26563a166e1ec5c29b0_icgraph.md5  Operations_8hpp_ac4901a5827c188f379e043e0f1ccc428_cgraph.md5  Operations_8hpp_ac4901a5827c188f379e043e0f1ccc428_icgraph.md5  Operations_8hpp_ad6517c004dfe7109973bb4726d0b118e_cgraph.md5  Operations_8hpp_ad6517c004dfe7109973bb4726d0b118e_icgraph.md5  Operations_8hpp_ad9fb84cef247c42a25e7715a4c61446a_cgraph.md5  Operations_8hpp_ad9fb84cef247c42a25e7715a4c61446a_icgraph.md5  Operations_8hpp_ada30a56b340402b7e751bc2446371cab_cgraph.md5  Operations_8hpp_ada30a56b340402b7e751bc2446371cab_icgraph.md5  Operations_8hpp_affd0318fddf0f1101a3cdf497e846d6e_cgraph.md5  Operations_8hpp_affd0318fddf0f1101a3cdf497e846d6e_icgraph.md5  Operations_8hpp_source.tex  (+43 more)
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  general.cpp  lin_reg.cpp  nn.cpp  pca.cpp  utils.hpp
src/examples/datasets/: housing.csv
src/pub/: Aliases.hpp  Concepts.hpp  Helpers.hpp  Logging.hpp  MLinalg.hpp  Numeric.hpp  Operations.hpp  Stacktrace.hpp  Structures.hpp
src/pub/operations/: Aliases.hpp  Builders.hpp  Checks.hpp  Decomposition.hpp  Echelon.hpp  Matrix.hpp  Pseudoinverse.hpp  Solve.hpp  Spaces.hpp
src/pub/structures/: Aliases.hpp  Allocator.hpp  Container.hpp  Matrix.hpp  MatrixBase.hpp  MatrixOps.hpp  MatrixView.hpp  Vector.hpp  VectorBase.hpp  VectorOps.hpp  VectorView.hpp
src/test/: CMakeLists.txt  bench.cpp  examples.cpp  fundamental.cpp  operations.cpp  profile.cpp
src/test/benchmarks/: helpers.hpp  matrix.cpp  vector.cpp
src/test/fundamental/: CMakeLists.txt  matrix.cpp  vector.cpp
test/: CMakeLists.txt  bench.cpp  examples.cpp  fundamental.cpp  fundamental_main.cpp  operations.cpp  profile.cpp  simple.cpp
